--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,32 @@
-<p>teste 1</p>
+<header class="main-header">
+  <h1 class="main-header__title">
+    <span class="main-header__title--blue">Proway</span>
+    <span class="main-header__title--orange">Computers</span>
+  </h1>
+  <div class="container">
+    <nav class="main-header__menu">
+      <ul>
+        <li>
+          <a>Produtos</a>
+        </li>
+        <li>
+          <a>
+            <i class="fa-solid fa-cart-shopping"></i>
+            Carrinho
+            <span class="badge-carrinho">0</span>
+          </a>
+        </li>
+        <li>
+          <a>Contato</a>
+        </li>
+        <li><a><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a><i class="fa-brands fa-twitter"></i></a></li>
+      </ul>
+    </nav>
+    <form class="search-form">
+      <input type="text">
+      <button><i class="fa-solid fa-magnifying-glass"></i></button>
+    </form>
+  </div>
+</header>
