--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -1,4 +1,4 @@
-<section class="productlist">
+<section class="product-list">
     <div class="product-list__card" *ngFor="let produto of produtos">
         <a routerLink="/produtos/{{produto.id}}" class="product-list__link">
             <img [src]="produto.imagem">
