--- a/src/app/produtos/detalhes-produto/detalhes-produto.component.html
+++ b/src/app/produtos/detalhes-produto/detalhes-produto.component.html
@@ -1,22 +1,22 @@
 <section class="product__container">
     <div class="product-image__container">
-        <img src="/assets/monitor-1.jpg">
+        <img [src]="produto?.imagem">
     </div>
     <div class="product-description__container">
         <h2 class="product__name">
-            Monitor muito bom
+            {{produto?.descricao}}
         </h2>
         <h3 class="product__price">
-            R$1.500,00
+            {{produto?.preco | currency: "BRL"}}
         </h3>
         <p>Estoque disponível</p>
         <label>
             Quantidade:
-            <input type="number">
+            <input type="number" [(ngModel)]="quantidade" min="1">
             unidades(s)
         </label>
         <p class="product__avaiability">
-            10 unidade(s)
+            {{produto?.quantidadeEstoque}} unidade(s)
         </p>
         <button>Adicionar ao carrinho</button>
     </div>
