botao adc ao carrinho

--- a/src/app/produtos/detalhes-produto/detalhes-produto.component.html
+++ b/src/app/produtos/detalhes-produto/detalhes-produto.component.html
@@ -18,6 +18,6 @@
         <p class="product__avaiability">
             {{produto?.quantidadeEstoque}} unidade(s)
         </p>
-        <button>Adicionar ao carrinho</button>
+        <button (click)="adicionarAoCarrinho()">Adicionar ao carrinho</button>
     </div>
 </section>
