adc logica adcionar ao carrinho

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="main-header">
     <h1 class="main-header__title">
-        <span class="main-header__title--blue">Proway</span>
-        <span class="main-header__title--orange">Computers</span>
+        <span class="main-header__title--blue">E</span>
+        <span class="main-header__title--orange">commerce</span>
     </h1>
     <div class="container">
         <nav class="main-header__menu">
@@ -13,7 +13,7 @@
                     <a>
                         <i class="fa-solid fa-cart-shopping"></i>
                         Carrinho
-                        <span class="badge-carrinho">0</span>
+                        <span class="badge-carrinho">{{ carrinhoService.obtemCarrinho().length }}</span>
                     </a>
                 </li>
                 <li>
