--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -1,18 +1,21 @@
 <h2 class="cart-title">Carrinho</h2>
-<div>
+<div *ngIf="itensCarrinho.length > 0; else semProduto">
     <ul>
-        <li>
-            <img src="/assets/monitor-1.jpg">
-            <p>Monitor</p>
-            <p>Preço R$1300</p>
+        <li *ngFor="let itemCarrinho of itensCarrinho">
+            <img [src]="itemCarrinho.imagem">
+            <p>{{itemCarrinho.descricao}}</p>
+            <p>{{itemCarrinho.preco | currency: "BRL"}}</p>
             <label>
                 Quantidade
-                <input type="number">
+                <input type="number" [(ngModel)]="itemCarrinho.quantidade" (change)="calculaTotal()">
             </label>
-            <button class="remove-button"><i class="fa-solid fa-x"></i></button>
+            <button class="remove-button" (click)="removeProdutoCarrinho(itemCarrinho.id)"><i
+                    class="fa-solid fa-x"></i></button>
         </li>
 
     </ul>
-    <h2 class="cart-total">Total: R$1300</h2>
-    <button class="buy-button">Finalizar compra</button>
+    <h2 class="cart-total">Total: {{total | currency: "BRL"}}</h2>
+    <button class="buy-button" (click)="comprar()">Finalizar compra</button>
 </div>
+
+<ng-template class="vazio" #semProduto>Seu carrinho está vazio</ng-template>
