--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
                     </a>
                 </li>
                 <li>
-                    <a>Contato</a>
+                    <a routerLink="/contato">Contato</a>
                 </li>
                 <li><a><i class="fa-brands fa-facebook"></i></a></li>
                 <li><a><i class="fa-brands fa-instagram"></i></a></li>
