--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,12 +1,81 @@
 <h2 class="contact__title">Entre em contato</h2>
 <section class="contact__container">
-    <form class="contact-form">
-        <input type="text" placeholder="Digite o seu nome" />
-        <input type="assunto" placeholder="Digite o assunto" />
-        <input type="tel" placeholder="(00) 0 0000-0000" />
-        <input type="email" placeholder="Digite o seu email" />
-        <textarea maxlength="300" placeholder="Digite sua mensagem"></textarea>
-        <button>Enviar</button>
+    <form class="contact-form" [formGroup]="formContato" (ngSubmit)="enviarFormulario()">
+        <input type="text" placeholder="Digite o seu nome" formControlName="nome"
+            [class.valid]="formContato.controls['nome'].valid" [class.invalid]="formContato.controls['nome'].invalid && 
+            (formContato.controls['nome'].touched|| formContato.controls['nome'].dirty)">
+
+        <div *ngIf="formContato.controls['nome'].invalid && 
+        (formContato.controls['nome'].touched|| formContato.controls['nome'].dirty)">
+
+            <small class="error-message" *ngIf="formContato.controls['nome'].hasError('minlength')">
+                Esse campo precisa de no mínimo 4 caracteres.
+            </small>
+            <small class="error-message" *ngIf="formContato.controls['nome'].hasError('required')">
+                Esse campo não pode ficar vazio.
+            </small>
+
+        </div>
+
+        <input type="assunto" placeholder="Digite o assunto" formControlName="assunto"
+            [class.valid]="formContato.controls['assunto'].valid" [class.invalid]="formContato.controls['assunto'].invalid && 
+            (formContato.controls['assunto'].touched|| formContato.controls['assunto'].dirty)">
+
+        <div *ngIf="formContato.controls['assunto'].invalid && 
+        (formContato.controls['assunto'].touched|| formContato.controls['assunto'].dirty)">
+
+            <small class="error-message" *ngIf="formContato.controls['assunto'].hasError('minlength')">
+                Esse campo precisa de no mínimo 10 caracteres.
+            </small>
+            <small class="error-message" *ngIf="formContato.controls['assunto'].hasError('required')">
+                Esse campo não pode ficar vazio.
+            </small>
+
+        </div>
+
+        <input type="tel" placeholder="(00) 0 0000-0000" mask="(00) 0 0000-0000" formControlName="telefone" />
+        <div *ngIf="formContato.controls['telefone'].invalid && 
+        (formContato.controls['telefone'].touched|| formContato.controls['telefone'].dirty)">
+
+            <small class="error-message" *ngIf="formContato.controls['telefone'].hasError('minlength')">
+                Digite um telefone válido.
+            </small>
+            <small class="error-message" *ngIf="formContato.controls['telefone'].hasError('required')">
+                Esse campo não pode ficar vazio.
+            </small>
+
+        </div>
+
+        <input type="email" placeholder="Digite o seu email" formControlName="email" />
+
+        <div *ngIf="formContato.controls['email'].invalid && 
+        (formContato.controls['email'].touched|| formContato.controls['email'].dirty)">
+
+            <small class="error-message" *ngIf="formContato.controls['email'].hasError('email')">
+                Digite um email válido.
+            </small>
+            <small class="error-message" *ngIf="formContato.controls['email'].hasError('required')">
+                Esse campo não pode ficar vazio.
+            </small>
+
+        </div>
+
+        <textarea maxlength="300" placeholder="Digite sua mensagem" rows="4" formControlName="mensagem"></textarea>
+
+        <div *ngIf="formContato.controls['mensagem'].invalid && 
+        (formContato.controls['mensagem'].touched|| formContato.controls['mensagem'].dirty)">
+
+            <small class="error-message" *ngIf="formContato.controls['mensagem'].hasError('minlength')">
+                Esse campo precisa de no mínimo 20 caracteres.
+            </small>
+            <small class="error-message" *ngIf="formContato.controls['mensagem'].hasError('required')">
+                Esse campo não pode ficar vazio.
+            </small>
+
+        </div>
+
+        <button [disabled]="formContato.invalid" type="submit">Enviar</button>
+
     </form>
     <address>
         <iframe
