barra de busca funcionando

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,8 +26,8 @@
         </nav>
         <br>
         <form class="search-form">
-            <input type="text">
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <input type="text" name="descricao">
+            <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
     </div>
 </header>
